image/流れ/を追加

--- a/about-programming.html
+++ b/about-programming.html
@@ -347,22 +347,33 @@
 				<div class="top">
 					<h2 class="title">３つの言語で作れるものと、<br>作れないもの。(2)</h2>
 					<p class="text">
-						まとめると、サーバーが必要な機能というのは、<br>
-						データの共有が必要な機能や、大量の情報を管理する必要がある機能のことです。<br>
-						そのような機能が必要な仕組みも作れるようになりたい場合は、この学習の後に、<br>サーバーサイドのプログラミング言語(PHP、Ruby、Pythonなど)を学んでいきましょう。<br>
+						話を戻すと、３つの言語だけでは作れない、サーバーが必要な機能というのは、<br>
+						データの共有や管理、秘匿したうえでの運用などが必要になる機能ということです。<br>
+						そのような機能も作れるようになりたい場合は、この学習の後に、<br>
+						サーバーサイドのプログラミング言語を学んでいきましょう。<br>
 						<br>
-						ちなみに、今回の学習で作ったものはインターネットに公開出来ないのか？<br>
-						と疑問を持った人もいるかもしれませんが、サーバーの知識がなくても、<br>かわりにインターネットに公開してくれるサービスが沢山あり、<br>
-						ひとまず外部からアクセス可能な状態にすることはできますので、安心してください。
+						ちなみに、これから作るものはWEBに公開出来ないのかというと、そうではありません。<br>
+						サーバーの知識がなくても、あなたのかわりにWEBにページを公開してくれるサービスが世の中にはたくさんあります。<br>
+						それを活用すれば、作品をインターネットからアクセスできる状態にできますので、ご安心ください。
 					</p>
 				</div>
 				<div class="bottom">
-					<div class="content">
+					<div class="content x">
+						<h3 class="title">データの共有</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/流れ/online.png">
 					</div>
-					<div class="content">
+					<div class="content x">
+						<h3 class="title">データの秘匿</h3>
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/login.png">
+					</div>
+					<div class="content x">
+						<h3 class="title">データの管理</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/流れ/table.png">
 					</div>
+					<p class="text">
+						※ サーバーから共有されるデータを利用するだけなら、JavaScriptだけでも対応できます。<br>
+						※ これらは、今の段階では理解できない方がほとんどです。気にせず、頭の片隅にでも置いておいてください。
+					</p>
 				</div>
 			</section>
 		</article>
