image/流れ/を追加

--- a/about-programming.html
+++ b/about-programming.html
@@ -180,9 +180,9 @@
 						この３つの言語が使えるようになると、WEBサイトやWEBアプリで表示されているページが作れるようになります。<br>
 						このカリキュラムでは、まずはそこを最初のゴールに設定しています。<br>
 						<br>
-						サーバーが必要な機能を作りたい場合は、<br>
-						この後にサーバーサイドのプログラミング言語(PHP、Ruby、Pythonなど)を学んでいきましょう。<br>
-						せっかくなので、次のページで、サーバーや、サーバーが必要な機能について簡単に説明します。
+						サーバーが必要な機能を作りたい場合は、この後に<br>
+						サーバーサイドのプログラミング言語(PHP、Rubyなど)を学びましょう。<br>
+						せっかくなので次のページで、サーバーや、サーバーが必要な機能について簡単に説明します。
 					</p>
 				</div>
 				<div class="bottom">
@@ -345,16 +345,55 @@
 
 			<section class="swiper-slide">
 				<div class="top">
+					<h2 class="title">サーバーとは (3)</h2>
+					<p class="text">
+						なぜ、データを共有するのに、サーバーを使う必要があるのでしょうか？<br>
+						サーバーを用意しなければ、データを共有することはできないのでしょうか？<br>
+						インターネット回線を、通信ケーブルに置きかえて考えてみましょう。<br>
+						<br>
+						アプリを使っているユーザーが、<br>
+						お互いの送信したデータをサーバーを介さずに確認しようとした場合、<br>
+						あなたはアプリのユーザー全員と通信ケーブルを繋ぎあう必要があります。<br>
+						サーバーを介する場合は、ユーザーが各自サーバーと繋がるだけになります。<br>
+						こう考えてみると、PCに詳しくなくとも、<br>サーバーを介さないやり方はあまりに非効率だと理解いただけると思います。
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<h3 class="title">サーバーを介さない場合</h3>
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/on_server.png">
+						<small class="text">
+							サーバーを介さずに全員と接続する場合、<br>
+							Aさん: Bさん、Cさん、Dさん、Eさん と接続<br>
+							Bさん: Aさん、Cさん、Dさん、Eさん と接続…<br>
+							のように、各自が全員と接続する必要があります。<br>
+							接続人數が増えれば増えるほど、効率が悪くなります。
+						</small>
+					</div>
+					<div class="content">
+						<h3 class="title">サーバーを介する場合</h3>
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/non_server.png">
+						<small class="text">
+							サーバーを介して接続する場合、<br>
+							Aさん: サーバーと接続<br>
+							Bさん: サーバーと接続…<br>
+							のように、各自がサーバーと接続するだけになります。<br>
+							こちらの方が圧倒的に効率的であることを、<br>
+							ご理解いただけると思います。
+						</small>
+					</div>
+				</div>
+			</section>
+
+			<section class="swiper-slide">
+				<div class="top">
 					<h2 class="title">３つの言語で作れるものと、<br>作れないもの。(2)</h2>
 					<p class="text">
-						話を戻すと、３つの言語だけでは作れない、サーバーが必要な機能というのは、<br>
-						データの共有や管理、秘匿したうえでの運用などが必要になる機能ということです。<br>
+						話を戻すと、サーバーが必要な機能というのは、<br>
+						ユーザー同士でデータを共有する機能や、<br>
+						その共有したデータを管理したり、秘匿したりする機能のことになります。<br>
 						そのような機能も作れるようになりたい場合は、この学習の後に、<br>
-						サーバーサイドのプログラミング言語を学んでいきましょう。<br>
-						<br>
-						ちなみに、これから作るものはWEBに公開出来ないのかというと、そうではありません。<br>
-						サーバーの知識がなくても、あなたのかわりにWEBにページを公開してくれるサービスが世の中にはたくさんあります。<br>
-						それを活用すれば、作品をインターネットからアクセスできる状態にできますので、ご安心ください。
+						サーバーサイドのプログラミング言語を学んでいきましょう。
 					</p>
 				</div>
 				<div class="bottom">
@@ -371,8 +410,10 @@
 						<img src="https://h40831.github.io/Hello-Programming/image/流れ/table.png">
 					</div>
 					<p class="text">
-						※ サーバーから共有されるデータを利用するだけなら、JavaScriptだけでも対応できます。<br>
-						※ これらは、今の段階では理解できない方がほとんどです。気にせず、頭の片隅にでも置いておいてください。
+						※ JavaScript上でデータを秘匿しようとしても、秘匿したいデータは既にPCの中にあるため、知識のある人は覗き見ることが出来てしまいます。<br>
+						※ 既にサーバーが共有しているデータを利用するだけであれば、JavaScriptでも対応できます。<br>
+						※ インターネットにサイトを公開するのもサーバーの役割ですが、その点は知識がなくても対応する方法があるので安心してください。<br>
+						※ この話は、今の段階では理解できない方がほとんどです。気にせず、頭の片隅に置いておいてください。
 					</p>
 				</div>
 			</section>
