about-programming.html ひとまず完成

--- a/about-programming.html
+++ b/about-programming.html
@@ -33,37 +33,53 @@
 				<div class="top">
 					<h2 class="title">プログラミング言語って？</h2>
 					<div class="text">
-						プログラミングは、文字のデータ（＝テキストファイル）を使って<br>
-						プログラムに実行させたい命令を書いていく作業になります。<br>
-						実行させる命令は、日本語じゃなく、これから学習する書き方で書いていくことになりますが<br>
-						この書き方のことを、プログラミング言語と呼びます。<br>
-						今後「言語」という言葉がでてきたら、プログラミング言語のことを言っていると考えてください。
+						プログラミングというのは、文字のデータ（＝テキストファイル）に<br>
+						実行させる命令を書きこんでいく作業になります。<br>
+						実行させる命令は日本語ではなく、これから学ぶ書き方で書くことになり、<br>
+						その書き方のルールのことを、プログラミング言語と呼びます。<br>
+						説明中で「言語」という言葉がでてきたら、プログラミング言語のことを言っていると考えてください。
 					</div>
 				</div>
 				<div class="bottom">
-					<div class="content">
+					<div class="content c">
+						<h3 class="title">C</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/C.png">
+						<small class="text">得意分野: PCの基幹システム</small>
 					</div>
 					<div class="content">
+						<h3 class="title">Java</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Java.png">
+						<small class="text">得意分野: 業務システム</small>
 					</div>
-					<div class="content">
+					<div class="content php">
+						<h3 class="title">PHP</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/php.png">
+						<small class="text">得意分野: WEB（サーバーサイド）</small>
 					</div>
 					<div class="content">
+						<h3 class="title">Ruby</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Ruby.png">
+						<small class="text">得意分野: WEB（サーバーサイド）</small>
 					</div>
 					<div class="content">
+						<h3 class="title">Python</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Python.png">
+						<small class="text">得意分野: 人工知能や機械学習</small>
 					</div>
 					<div class="content">
+						<h3 class="title">GO</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/go.png">
+						<small class="text">得意分野: WEB（サーバーサイド）</small>
 					</div>
 					<div class="content">
+						<h3 class="title">Swift</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Swift.png">
+						<small class="text">得意分野: iPhoneアプリ</small>
 					</div>
 					<div class="content">
+						<h3 class="title">Kotlin</h3>
 						<img src="https://h40831.github.io/Hello-Programming/image/言語ロゴ/Kotlin.png">
+						<small class="text">得意分野: Androidアプリ</small>
 					</div>
 				</div>
 			</section>
@@ -80,22 +96,50 @@
 				<div class="bottom">
 					<div class="content">
 						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_html.gif">
+						<p class="text">対応分野: WEBサイトの骨組</p>
 					</div>
 					<div class="content">
 						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_css.gif">
+						<p class="text">対応分野: WEBサイトの外観</p>
 					</div>
 					<div class="content">
 						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/logo_javascript.gif">
+						<p class="text">対応分野: WEBサイトの機能</p>
 					</div>
 				</div>
 			</section>
 
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">なぜWEBなのか？</h2>
+					<p class="text">
+						存在するほとんどのWEBサイトは、HTMLとCSSを使えばそっくりに作成することができ、JavaScriptを使えばそれを自在に動かすことができます。<br>
+						見慣れないプログラミングをいきなり学びはじめるよりも、<br>挫折しにくく、かつ楽しく学習を進めることができます。
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<h3 class="title">1. WEBサイトの骨組が作れるようになる。</h3>
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_html.png">
+						<div class="arrow"></div>
+					</div>
+					<div class="content">
+						<h3 class="title">2. WEBサイトの外観が作れるようになる。</h3>
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_css.png">
+						<div class="arrow"></div>
+					</div>
+					<div class="content">
+						<h3 class="title">3. WEBサイトの機能が作れるようになる。</h3>
+						<img class="logo" src="https://h40831.github.io/Hello-Programming/image/言語サンプル/sample_javascript.gif">
+					</div>
+				</div>
+			</section>
 
 			<section class="swiper-slide">
 				<div class="top">
-					<h2 class="title">HTML</h2>
+					<h2 class="title">HTMLとは</h2>
 					<p class="text">
-						HTMLは、WEBサイトの構造を決めるための言語です。<br>
+						HTMLは、WEBサイトの骨組を作るための言語です。<br>
 						文字、ボタン、入力欄などの要素を配置する順番を書きこんだり、<br>
 						このスライドの水色の部分のように、要素の範囲を決めたりします。<br>
 						更に、WEBサイトの設定（タイトルの指定や、CSSやJavaScriptの読み込みなど）も、HTMLで行っています。
@@ -113,9 +157,9 @@
 			</section>
 			<section class="swiper-slide">
 				<div class="top">
-					<h2 class="title">CSS</h2>
+					<h2 class="title">CSSとは</h2>
 					<p class="text">
-						CSSは、WEBサイトの見た目やデザインを決めるための言語です。<br>
+						CSSは、WEBサイトの見た目やデザインを作るための言語です。<br>
 						背景や文字の色、要素の右寄せや中央寄せ、要素の間隔･余白や表示/非表示の指定をはじめ、全てのデザインはCSSで指定していきます。<br>
 						また、マウスが合っている要素の色を変えたり、アクセス済のリンクの色を変えるなど、ユーザーの動きに対して見た目を変えるような指定もできます。
 					</p>
@@ -132,7 +176,7 @@
 			</section>
 			<section class="swiper-slide">
 				<div class="top">
-					<h2 class="title">JavaScript</h2>
+					<h2 class="title">JavaScriptとは</h2>
 					<p class="text">
 						JavaScriptは、HTMLやCSSでは出来ない様々な機能を作る言語です。<br>
 						ページの移動、テキストのコピー、要素の追加、数をカウントして表示するなどの様々な機能を作成したり、その機能を発動する条件やタイミングを指定するなど…。１つ１つの機能を組み合わせれば、できることは無限にあります。<br>
@@ -179,10 +223,8 @@
 					<p class="text">
 						この３つの言語が使えるようになると、WEBサイトやWEBアプリで表示されているページが作れるようになります。<br>
 						このカリキュラムでは、まずはそこを最初のゴールに設定しています。<br>
-						<br>
 						サーバーが必要な機能を作りたい場合は、この後に<br>
-						サーバーサイドのプログラミング言語(PHP、Rubyなど)を学びましょう。<br>
-						せっかくなので次のページで、サーバーや、サーバーが必要な機能について簡単に説明します。
+						サーバーサイドのプログラミング言語(PHP、Rubyなど)を学びましょう。
 					</p>
 				</div>
 				<div class="bottom">
@@ -219,16 +261,14 @@
 						<img src="https://h40831.github.io/Hello-Programming/image/流れ/pc.png">
 						<div class="arrow"></div>
 						<p class="text">
-							URLを入力したとき、同時に<br>
-							WEBサイトのデータを返送するよう<br>
-							サーバーにリクエストを送ります。
+							URL入力と同時に、サーバーに対し<br>
+							ページのデータをリクエストします。
 						</p>
 						<small>
 							「http://◯◯◯.com/index」というアドレスの場合、<br>
 							「http://」が、リクエストしているという合図、<br>
 							「◯◯◯.com」が、リクエストするサーバーのアドレス、<br>
-							「index」が、返送してほしいファイルの名前<br>
-							を表しています。
+							「index」が、返送してほしいファイルの名前 を示します。
 						</small>
 					</div>
 					<div class="content">
@@ -237,18 +277,14 @@
 						<img src="https://h40831.github.io/Hello-Programming/image/流れ/server.png">
 						<div class="arrow"></div>
 						<p class="text">
-							サーバーは、リクエストを受け取り、<br>
-							あなたに送るべきデータを選んで<br>
-							返送します。
+							リクエストを受け取り、あなたに<br>
+							送るべきデータを選んで返送します。
 						</p>
 						<small>
 							サーバーが送らなかったファイルは<br>
 							あなたのPCから表示することはできないので、<br>
 							サーバーは個人情報やパスワード、<br>
-							見せたくないファイルなどを守ることができます。<br>
-							<br>
-							JavaScriptではすべてローカルにデータがある状態なので、<br>
-							隠したい情報も、暴こうとすれば、暴けてしまいます。
+							見せたくないファイルなどを守ることができます。
 						</small>
 					</div>
 					<div class="content">
@@ -277,7 +313,7 @@
 						</p>
 						<small>
 							データを開くというのはつまり、<br>
-							HTMLで決められた構造、CSSで指示されたスタイル、<br>
+							HTMLで決められた骨組、CSSで指示されたスタイル、<br>
 							JavaScriptで作られた機能を、<br>
 							言語の指示通りに表示するという事です。
 						</small>
@@ -347,40 +383,35 @@
 				<div class="top">
 					<h2 class="title">サーバーとは (3)</h2>
 					<p class="text">
-						なぜ、データを共有するのに、サーバーを使う必要があるのでしょうか？<br>
-						サーバーを用意しなければ、データを共有することはできないのでしょうか？<br>
+						なぜ、データを共有するのに、サーバーを使う必要があるのか、<br>
 						インターネット回線を、通信ケーブルに置きかえて考えてみましょう。<br>
 						<br>
-						アプリを使っているユーザーが、<br>
-						お互いの送信したデータをサーバーを介さずに確認しようとした場合、<br>
-						あなたはアプリのユーザー全員と通信ケーブルを繋ぎあう必要があります。<br>
-						サーバーを介する場合は、ユーザーが各自サーバーと繋がるだけになります。<br>
-						こう考えてみると、PCに詳しくなくとも、<br>サーバーを介さないやり方はあまりに非効率だと理解いただけると思います。
+						アプリを使っているユーザーが、お互いの送信したデータを<br>
+						サーバーを介さずに共有しようとした場合、各自が全員と通信ケーブルを繋ぎあう必要がありますが、サーバーを介する場合、ユーザーが各自サーバーと繋がるだけになるので、サーバーを介す方法のほうが圧倒的に効率的です。
 					</p>
 				</div>
 				<div class="bottom">
 					<div class="content">
 						<h3 class="title">サーバーを介さない場合</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/流れ/on_server.png">
-						<small class="text">
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/non_server.png">
+						<p class="text"><small>
 							サーバーを介さずに全員と接続する場合、<br>
-							Aさん: Bさん、Cさん、Dさん、Eさん と接続<br>
-							Bさん: Aさん、Cさん、Dさん、Eさん と接続…<br>
+							Aさんは Bさん、Cさん、Dさん、Eさん と接続<br>
+							Bさんは Aさん、Cさん、Dさん、Eさん と接続…<br>
 							のように、各自が全員と接続する必要があります。<br>
-							接続人數が増えれば増えるほど、効率が悪くなります。
-						</small>
+							接続人數が増えれば増えるほど、現実的ではなくなります。
+						</small></p>
 					</div>
 					<div class="content">
 						<h3 class="title">サーバーを介する場合</h3>
-						<img src="https://h40831.github.io/Hello-Programming/image/流れ/non_server.png">
-						<small class="text">
+						<img src="https://h40831.github.io/Hello-Programming/image/流れ/on_server.png">
+						<p class="text"><small>
 							サーバーを介して接続する場合、<br>
-							Aさん: サーバーと接続<br>
-							Bさん: サーバーと接続…<br>
-							のように、各自がサーバーと接続するだけになります。<br>
+							全てのユーザーが、<br>
+							それぞれサーバーと接続するだけになります。<br>
 							こちらの方が圧倒的に効率的であることを、<br>
 							ご理解いただけると思います。
-						</small>
+						</small></p>
 					</div>
 				</div>
 			</section>
@@ -427,11 +458,20 @@
 		<div class="modalWindow">
 			<h2>スライドは以上です！</h2>
 			<p>
-				
+				前提知識の説明がおわったので、学習をはじめましょう！<br>
+				学習サービスのProgateを開き、会員登録してください。<br>
+				（有料プランに変更するまでは、無料でご利用いただけます！）<br>
+				<a href="https://prog-8.com/" target="_blank">
+					<button type="button">Progateをはじめる</button>
+				</a>
 			</p>
-			<a href="https://menta.work/plan/1225" target="_blank">
-				<button type="button">Progateをはじめる</button>
-			</a>
+			<p>
+				会員登録が終わったら、次のスライドへ進んでください。<br>
+				具体的な学習ルートの説明をはじめます。<br>
+				<a href="https://h40831.github.io/Hello-Programming/.html">
+					<button type="button">次のスライドへすすむ</button>
+				</a>
+			</p>
 		</div>
 	</div>
 
