learning-route.htmlを作成

--- a/about-programming.html
+++ b/about-programming.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="about-programming.css">
 </head>
-<body id="learning-method">
+<body id="about-programming">
 	<main class="swiper-container">
 		<article class="swiper-wrapper">
 			<section class="swiper-slide text-only">
@@ -468,7 +468,7 @@
 			<p>
 				会員登録が終わったら、次のスライドへ進んでください。<br>
 				具体的な学習ルートの説明をはじめます。<br>
-				<a href="https://h40831.github.io/Hello-Programming/.html">
+				<a href="https://h40831.github.io/Hello-Programming/learing-route.html">
 					<button type="button">次のスライドへすすむ</button>
 				</a>
 			</p>
