endModalの出し方を変更

--- a/about-programming.html
+++ b/about-programming.html
@@ -448,6 +448,8 @@
 					</p>
 				</div>
 			</section>
+
+			<section class="swiper-slide end"></section>
 		</article>
 		<nav>
 			<div class="prev"></div>
