--- a/learning-method.html
+++ b/learning-method.html
@@ -411,6 +411,8 @@
 					</a>
 				</div>
 			</section>
+
+			<section class="swiper-slide end"></section>
 		</article>
 		<nav>
 			<div class="prev"></div>
