/image/練習作品を追加

--- a/learning-route-html-css.html
+++ b/learning-route-html-css.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="bottom">
 					<p>
-						<div class="lesson card html-css">
+						<div class="lesson card html-css" onclick="mySwiper.slideTo(2);">
 							<div class="label">
 								学習コース
 							</div>
@@ -54,7 +54,7 @@
 							</div>
 						</div>
 
-						<div class="lesson card html-css">
+						<div class="lesson card html-css" onclick="mySwiper.slideTo(3);">
 							<div class="label">
 								学習コース
 							</div>
@@ -71,7 +71,7 @@
 							</div>
 						</div>
 
-						<div class="lesson card html-css dojo">
+						<div class="lesson card html-css dojo" onclick="mySwiper.slideTo(4);">
 							<div class="label">
 								道場コース
 							</div>
@@ -88,7 +88,7 @@
 							</div>
 						</div>
 
-						<div class="lesson card html-css dojo">
+						<div class="lesson card html-css dojo" onclick="mySwiper.slideTo(5);">
 							<a href="#5"></a>
 							<div class="label">
 								道場コース
@@ -272,7 +272,124 @@
 					</div>
 				</div>
 			</section>
-			
+
+
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">レッスンを終えましたか？</h2>
+					<p class="text">
+						お疲れさまでした！<br>
+						HTMLとCSSはWEBの基本ですが、このあと練習作品を作る過程で、<br>
+						繰り返し書いて自然に覚えますので、いま全てを覚える必要はありません。<br>
+						それまでは忘れたら、またProgateのスライドを見にいきましょう。<br>
+						つぎのステップに取りかかる前に、下の２つの記事を読んでおいてください。<br>
+						<small>
+							※ 2つ目の記事で「Atom」のダウンロードを推奨していますが、サークルでは
+							「<a href="https://eng-entrance.com/sublimetext-start#SublimeText-2" target="_blank">Sublime Text 3</a>」
+							をおすすめしています。
+						</small>
+					</p>
+				</div>
+				<div class="bottom">
+					<a class="tutorial card" href="https://prog-8.com/docs/html-dev" target="_blank">
+						<div class="thumbnail">
+							<img src="https://h40831.github.io/Hello-Programming/image/レッスン/html-css.png">
+						</div>
+						<div class="detail">
+							<div class="title">チュートリアル</div>
+							<div class="text">
+								検証ツール（デベロッパーモード）の使い方
+							</div>
+						</div>
+					</a>
+
+					<a class="tutorial card win" href="https://prog-8.com/docs/html-env-win" target="_blank">
+						<div class="thumbnail">
+							<img src="https://h40831.github.io/Hello-Programming/image/レッスン/html-css.png">
+						</div>
+						<div class="detail">
+							<div class="title">チュートリアル</div>
+							<div class="text">
+								HTML & CSS の開発環境を用意しよう！（Windows用）
+							</div>
+						</div>
+					</a>
+					<a class="tutorial card mac" href="https://prog-8.com/docs/html-env" target="_blank">
+						<div class="thumbnail">
+							<img src="https://h40831.github.io/Hello-Programming/image/レッスン/html-css.png">
+						</div>
+						<div class="detail">
+							<div class="title">チュートリアル</div>
+							<div class="text">
+								HTML & CSS の開発環境を用意しよう！
+							</div>
+						</div>
+					</a>
+				</div>
+			</section>
+			<section class="swiper-slide practice">
+				<div class="top">
+					<h2 class="title">練習作品をつくろう！</h2>
+					<p class="text">
+						レッスンを終えたあとは、学んだ知識を活かした練習作品をつくって、<br>
+						実践的なコツを身につけましょう！<br>
+						HTML/CSSの練習には、サイトの模写が最適です。<br>
+						最初は何もかもがわからなくて大変かもしれませんが、<br>
+						理解しはじめたらサクサク進むようになって、楽しいですよ！<br>
+						おすすめの課題は以下になります。
+					</p>
+				</div>
+				<div class="bottom">
+					<p><< 低　　難易度　　高 >></p>
+					<div class="content">
+						<h3 class="title">サルワカ</h3>
+						<a href="https://saruwakakun.com/">
+							<img src="https://h40831.github.io/Hello-Programming/image/練習作品/saruwaka.png">
+						</a>
+					</div>
+					<div class="content">
+						<h3 class="title">Instagram</h3>
+						<a href="https://www.instagram.com/?hl=ja">
+							<img src="https://h40831.github.io/Hello-Programming/image/練習作品/instagram.png">
+						</a>
+					</div>
+					<div class="content">
+						<h3 class="title">Twitter</h3>
+						<a href="https://twitter.com/home">
+							<img src="https://h40831.github.io/Hello-Programming/image/練習作品/twitter.png">
+						</a>
+					</div>
+				</div>
+			</section>
+			<section class="swiper-slide">
+				<div class="top">
+					<h2 class="title">練習作品のヒント</h2>
+					<p class="text">
+						
+					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<h3>補足説明</h3>
+						<ul>
+							<li></li>
+						</ul>
+					</div>
+					<div class="content">
+						<h3>ヒント</h3>
+						<ul>
+							<li></li>
+						</ul>
+					</div>
+					<div class="content">
+						<h3>チャレンジ</h3>
+						<ul>
+							<li>状態によって表示が変わる部分（「いいね」ボタンなど）は、<br>
+							クラスの付加によって同じように変化するようにしてみましょう。</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 
 			<section class="swiper-slide end"></section>
 		</article>
