learning-route関連一部編集

--- a/learning-route-js-jquery.html
+++ b/learning-route-js-jquery.html
@@ -13,17 +13,10 @@
 			<section class="swiper-slide text-only">
 				<h1>
 					Hello Programing!<br>
-					HTML/CSS
+					JavaScript/jQuery
 				</h1>
 				<p>
-					Progateへは、会員登録済みですか？<br>
-					登録が済みましたら、早速学習に入りましょう！<br>
-					<br>
-					言語を学ぶ際は、<br>
-					1. まず、わかりやすい資料で学習する。<br>
-					2. つぎに、学んだ知識を活用できる練習作品を作る。<br>
-					3. 必要になったら、より詳しい資料を読んで学習する。<br>
-					というサイクルで進めていきましょう。
+					
 				</p>
 			</section>
 
@@ -438,9 +431,12 @@
 
 			<section class="swiper-slide">
 				<div class="top">
-					<h2 class="title">練習作品を終えて</h2>
+					<h2 class="title">最終的な目標</h2>
 					<p class="text">
-						
+						JavaScript/jQueryで<br>
+						・公式マニュアルとGoogle検索を適切に活用して、目的を達成できること。<br>
+						・デバッグがきちんとできること。<br>
+						・エラーメッセージをきちんと読んだり調べたりして、問題に対処できること。<br>
 					</p>
 				</div>
 				<div class="bottom">
