１ページめ文言追加

--- a/about-programming.html
+++ b/about-programming.html
@@ -16,6 +16,11 @@
 					これから学ぶことについて知ってみよう
 				</h1>
 				<p>
+					<strong>操作方法</strong><br>
+					← : １ページ戻る  /  → : １ページ進む<br>
+					↑ : 文字を拡大する  /  ↓ : 文字を縮小する
+				</p>
+				<p>
 					実際に学習サービスを使って学習をはじめる前に、<br>
 					これから学ぶことについて、かんたんに知ってみましょう。<br>
 					<br>
