--- a/about-programming.html
+++ b/about-programming.html
@@ -15,8 +15,8 @@
 					Hello Programing!<br>
 					これから学ぶことについて知ってみよう
 				</h1>
-				<p>
-					<strong>操作方法</strong><br>
+				<p style="margin-bottom:2em;">
+					<strong> - キーボードでの操作方法 - </strong><br>
 					← : １ページ戻る  /  → : １ページ進む<br>
 					↑ : 文字を拡大する  /  ↓ : 文字を縮小する
 				</p>
@@ -226,7 +226,7 @@
 				<div class="top">
 					<h2 class="title">３つの言語で作れるものと、<br>作れないもの。(1)</h2>
 					<p class="text">
-						この３つの言語が使えるようになると、WEBサイトやWEBアプリで表示されているページが作れるようになります。<br>
+						この３つの言語が使えるようになると、WEBサイトや、アプリのようなWEBサイト（＝WEBアプリ）が作れるようになります。<br>
 						このカリキュラムでは、まずはそこを最初のゴールに設定しています。<br>
 						サーバーが必要な機能を作りたい場合は、この後に<br>
 						サーバーサイドのプログラミング言語(PHP、Rubyなど)を学びましょう。
@@ -448,7 +448,8 @@
 					<p class="text">
 						※ JavaScript上でデータを秘匿しようとしても、秘匿したいデータは既にPCの中にあるため、知識のある人は覗き見ることが出来てしまいます。<br>
 						※ 既にサーバーが共有しているデータを利用するだけであれば、JavaScriptでも対応できます。<br>
-						※ インターネットにサイトを公開するのもサーバーの役割ですが、その点は知識がなくても対応する方法があるので安心してください。<br>
+						※ JavaScriptのプログラムが動くのは、ページを表示している時だけなので、ユーザーがページを開いてない時でもやりたい事がある場合、サーバーが必要です。<br>
+						※ これから作るサイトをネットに公開するのもサーバーの役割ですが、その点は知識がなくても対応する方法があるので安心してください。<br>
 						※ この話は、今の段階では理解できない方がほとんどです。気にせず、頭の片隅に置いておいてください。
 					</p>
 				</div>
