--- a/about-programming.html
+++ b/about-programming.html
@@ -448,7 +448,7 @@
 					<p class="text">
 						※ JavaScript上でデータを秘匿しようとしても、秘匿したいデータは既にPCの中にあるため、知識のある人は覗き見ることが出来てしまいます。<br>
 						※ 既にサーバーが共有しているデータを利用するだけであれば、JavaScriptでも対応できます。<br>
-						※ JavaScriptのプログラムが動くのは、ページを表示している時だけです。ユーザーがページを開いてないに行いたい機能がある場合、サーバーが必要です。<br>
+						※ JavaScriptのプログラムが動くのは、ページを表示している時だけです。ユーザーがページを開いてないときに行いたい機能がある場合、サーバーが必要です。<br>
 						※ これから作るサイトをネットに公開するのもサーバーの役割ですが、その点は知識がなくても対応する方法があるので安心してください。<br>
 						※ この話は、今の段階では理解できない方がほとんどです。気にせず、頭の片隅に置いておいてください。
 					</p>
